tests/integrations/basic-fail/tests/actual_tests/bad_pattern_multiple.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/bad_pattern_multiple.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/tests/integrations/basic-fail/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error[E0308]: mismatched types
  --> tests/actual_tests/bad_pattern_multiple.rs:6:9
  |
6 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
  --> $DIR/tests/integrations/basic-fail/src/lib.rs:LL:CC
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

    error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
